Aggiunto nuovo sitemap XML e rimosso sitemap obsoleta; aggiornato link nella cookie policy e creato nuovo file live.html per reindirizzamento.

--- a/Z-Folder/live.html
+++ b/Z-Folder/live.html
@@ -17,12 +17,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
 -------------------------------------------------------------------------------
 
 # Version: v3.2
-# URL: https://genialabile.com/ ?????????????????????
+# URL: https://genialabile.com/Z-Folder/live.html
 ===============================================================================
-
-User-agent: *
-Disallow: /redirect-fake.html
-
 -->
 
 <!DOCTYPE html>
@@ -30,7 +26,7 @@ Disallow: /redirect-fake.html
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting...</title>
+    <title>Gen-Redirecting...</title>
     <!-- Prevent search engines from indexing this page -->
     <meta name="robots" content="noindex, nofollow">
     <!-- Fallback redirect -->
@@ -43,13 +39,13 @@ Disallow: /redirect-fake.html
     </script>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, sans-serif;
             background-color: #000;
-            color: #00ff00;
+            color: #00ff00cc;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            height: 110vh;
             margin: 0;
             text-align: center;
         }
@@ -59,7 +55,9 @@ Disallow: /redirect-fake.html
     </style>
 </head>
 <body>
-    <h1>Redirecting you to the CLI platform...</h1>
-    <p>If you are not redirected automatically, <a href="https://genialabile.com/cli">click here</a>.</p>
+    <p>If you are not redirected automatically:
+        <br><br>
+        <a href="https://genialabile.com/cli">click here</a>.
+    </p>
 </body>
 </html>
