--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -157,7 +157,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         We reserve the right to update this Cookie Policy.
                         Changes will be effective upon posting, and the "Last Updated" date will be revised accordingly.
                         Please take a moment to review this policy periodically, same for our 
-                        <a href="https://genialabile.com/privacy-policy.html"
+                        <a href="https://genialabile.com/privacy-policy"
                         aria-label="Visit Privacy Policy">Privacy Policy</a>.
                     </p>
                 </section>
