--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,6 +1,6 @@
 <!-- 
 ===============================================================================
-# Project: Gen-IA
+# Project: genialabile.com
 # Website: Minimal welcome website
 ===============================================================================
 
@@ -16,19 +16,21 @@ This project is no longer available as open-source. Updated: 10 Jan 2025.
 Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
 -------------------------------------------------------------------------------
 
-# Version: v3.1 (160125)
+# Version: v3.2 (190125)
 # URL: https://genialabile.com/privacy-policy.html
 ===============================================================================
 -->
-<!-- START -->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Genialabile | Privacy Policy</title>
         <meta name="description" content="Genialabile - Privacy Policy Content.">
-        <link rel="canonical" href="https://genialabile.com/privacy-policy.html">
-   
-        <!-- header.html -->
+        <!-- Meta tags for search engines -->
+        <meta name="keywords" content="Genialabile, Privacy Policy, GDPR, CCPA, Data Protection">
+        <link rel="canonical" href="https://genialabile.com/accessibility.html">
+
+        <!-- Fetching header dynamically -->
         <script>
             fetch('https://genialabile.com/header.html')
                 .then(response => response.text())
@@ -37,219 +39,219 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 })
                 .catch(error => console.error('Error fetching header:', error));
         </script>
-        <!-- header.html --> 
+        
     </head>
-    <!-- SHIFT -->
-    <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
+    <body style="background-color: #000000; color: #000000;">
         <main>
-            <h1>
-                <a href="https://genialabile.com/privacy-policy.html"
-                aria-label="Read our full Privacy Policy" title="Read our full Privacy Policy">
-                    PRIVACY POLICY
-                </a>
+             <!-- Main title -->
+             <h1>
+                <a href="https://genialabile.com/"
+                aria-label="Visit Genialabile Home" title="Visit Genialabile Home">
+                GENiALABILE</a>
             </h1>
-            <div class="imp-l">
-                <p>
-                    <h3><br>
-                        🎗️ Welcome
-                    </h3>
+            <!-- Spacer Divider -->
+            <div class="divider-with-padding"></div>
+
+            <div id="imp-links">
+                <section>
+                    <h2>Privacy Policy</h2>
                     <hr class="thin-line">
+                    <p>
                         This Privacy Policy explains how we collect, use, and protect your personal information while ensuring compliance with international.
                         <br>
                         Our policy follow the European Union (EU), and United States (US) data protection laws standard.
-                </p>
-                <p>
-                    <h3><br>
-                        📂 Information we collect
-                    </h3>
+                    </p>
+                </section>
+
+                <section><br></section>
+
+                <section>
+                    <h3>📂 Data</h3>
                     <hr class="thin-line">
-                        # Personal Identification Data:
+                    <p>
+                        Personal Identification Data:
                         <br>
                         Name, email address, and other contact details provided by you.
-                        <br><br>
-                        # Essential Cookies:
+                    </p>
+                    <p>  
+                        Essential Cookies:
                         <br>
                         Required for the operation of our website.
-                </p>
-                <p>
-                    <h3><br>
-                        🧸 How we use your information
-                    </h3>
+                    </p>
+                </section>
+
+                <section><br></section>
+
+                <section>
+                    <h3>🧸 Information</h3>
                     <hr class="thin-line">
-                        # Communication:
+                    <p>
+                        Communication:
                         <br>
                         Respond to inquiries and provide updates.
-                        <br><br>
-                        # Compliance:
+                    </p>
+                    <p>
+                        Compliance:
                         <br>
                         Fulfill legal obligations and enforce our Terms and Conditions.
-                 </p>
-                <p>
-                    <h3><br>
-                        💈 Google Analytics
-                    </h3>
+                    </p>
+                </section>
+
+                <section><br></section>
+
+                <section>
+                    <h3>💈 Analytics</h3>
                     <hr class="thin-line">
+                    <p>
                         We do not use Google Analytics to understand user interactions.
-                        <br><br>
-                        # Opt-Out:
+                    </p>
+                    <p>
+                        Opt-Out:
                         <br>
                         Users can manage the tracking through the
                         <a href="https://tools.google.com/dlpage/gaoptout" target="_blank" style="font-weight: normal;"
                         aria-label="Install Google Analytics Opt-Out Browser Add-on to disable tracking">
-                        Google Analytics Opt-Out Browser Add-on</a>.
-                </p>
-                <p>
-                    <h3><br>
-                        🪝 Your rights
-                    </h3>
+                            Google Analytics Opt-Out Browser Add-on</a>.
+                    </p>
+                </section>
+
+                <section><br></section>
+
+                <section>
+                    <h3>🪝 Rights</h3>
                     <hr class="thin-line">
+                    <p>
                         EU Users (GDPR):
                         <br>
-                        # Right to access, correct, or delete your data.
+                        <b>#</b> Right to access, correct, or delete your data.
                         <br><br>
-                        # Right to restrict processing and data portability.
+                        <b>#</b> Right to restrict processing and data portability.
                         <br><br>
-                        # Right to withdraw consent at any time.
-                        <br><br>
+                        <b>#</b> Right to withdraw consent at any time.
+                    </p>
+                    <p>
                         US Users (CCPA):
                         <br>
-                        # Right to know what personal data we collect.
+                        <b>#</b> Right to know what personal data we collect.
                         <br><br>
-                        # Right to request deletion of your data.
+                        <b>#</b> Right to request deletion of your data.
                         <br><br>
-                        # Right to opt-out of data sharing for targeted advertising.
-             </p>
-                <p>
-                    <h3><br>
-                        📃 Data storage and retention
-                    </h3>
+                        <b>#</b> Right to opt-out of data sharing for targeted advertising.
+                    </p>
+                </section>
+
+                <section><br></section>
+
+                <section>
+                    <h3>📃 Storage</h3>
                     <hr class="thin-line">
+                    <p>
                         Your data is securely stored on servers located.
                         We retain your data only as long as necessary for the outlined purposes or as required by law.
-                        We do not store your data indefinitely in our systems.    
-                </p>
-                <p>
-                    <h3><br>
-                        🍪 Cookies
-                    </h3>
+                        We do not store your data indefinitely in our systems.
+                    </p>
+                </section>
+
+                <section><br></section>
+
+                <section>
+                    <h3>🍪 Cookies</h3>
                     <hr class="thin-line">
-                        Please visit our <a href="https://genialabile.com/cookie-policy.html" style="font-weight: normal;"
+                    <p>
+                        Please visit our <a href="https://genialabile.com/cookie-policy" style="font-weight: normal;"
                         aria-label="Visit Cookie Policy page">Cookie Policy</a>
                         for more information about how we use cookies on this website.
                         Cookies are used to improve user experience.
                         Manage your preferences through browser settings or via the 
                         <a href="https://www.youronlinechoices.com/" target="_blank" style="font-weight: normal;"
                         aria-label="Visit Your Online Choices platform (opens in new tab)">
-                        Your Online Choices</a>
-                        platform.
-               </p>
-                <p>
-                    <h3><br>
-                        🔒 Data security
-                    </h3>
+                            Your Online Choices</a> platform.
+                    </p>
+                </section>
+
+                <section><br></section>
+
+                <section>
+                    <h3>🔒 Security</h3>
                     <hr class="thin-line">
+                    <p>
                         We implement technical and organizational measures to safeguard your data from unauthorized access or misuse.
                         Using encryption, firewalls, and access controls to protect your data and our information systems.
                         Security for us is a top priority.
-                </p>
-                <p>
-                    <h3><br>
-                        📠 Sharing your information
-                    </h3>
+                    </p>
+                </section>
+
+                <section><br></section>
+
+                <section>
+                    <h3>📠 Sharing</h3>
                     <hr class="thin-line">
+                    <p>
                         We do not sell your personal data in any form and circumstances.
                         Data may be shared with service providers (e.g. hosting and email) or legal authorities, if required.
                         We ensure data protection measures are in place, disabled by default in our systems.
-                </p>
-                <p>
-                    <h3><br>
-                        🛵 International transfers
-                    </h3>
+                    </p>
+                </section>
+
+                <section><br></section>
+
+                <section>
+                    <h3>🛵 International</h3>
                     <hr class="thin-line">
+                    <p>
                         Your information may be transferred outside your Country.
                         <br>
                         We ensure data protection measures are in place.
-                </p>
-                <p>
-                    <h3><br>
-                        🎭 Change to this privacy policy
-                    </h3>
+                    </p>
+                </section>
+
+                <section><br></section>
+
+                <section>
+                    <h3>🎭 Changes</h3>
                     <hr class="thin-line">
+                    <p>
                         Updates will be posted on this page with the "Last Updated" date.
                         Continued use of our services implies acceptance of the updated policy.
-                </p>
-                <p>
-                    <h3><br>
-                        📮 About your privacy
-                    </h3> 
+                    </p>
+                </section>
+
+                <section><br></section>
+
+                <section>
+                    <h3>📮 Query</h3>
                     <hr class="thin-line">
-                        If you have any questions or concerns, please contact us at:
-                        <br><br>
-                        Gen:
-                        <a href="mailto:info@genialabile.com?subject=Cookie%20Policy"
-                        aria-label="Email Genialabile at info@genialabile.com regarding Privacy Policy">
-                            info@genialabile.com
-                        </a>
-                        <i>(limited uptime)</i>
-                        <br><br>
-                        Gmail:
-                        <a href="mailto:genialabile@gmail.com?subject=Cookie%20Policy"
-                        aria-label="Email Genialabile at genialabile@gmail.com regarding Privacy Policy">
-                            genialabile@gmail.com
-                        </a>
-                </p>
+                    <p>
+                        Email: 
+                        <a href="mailto:info@genialabile.com?subject=Privacy%20Request"
+                        aria-label="Email Genialabile at info@genialabile.com">
+                        info@genialabile.com</a>
+                        <!-- <i>(limited uptime)</i> -->
+                    </p>
+                </section>
             </div>
-            <br>
+
+            <section><br></section>
+
+            <section>
             <p class="txt-mini">
-                * * *
-                <br>
-                Last Updated: 16 January 2025
+                <b>#</b> Last Updated: 20 January 2025
             </p>
+            </section>
         </main>
-        <!-- TRICK -->
-            <div id="footer-banner">
-                <div id="footer-content"></div>
-            </div>
-        <!-- TRICK -->
+
+        <!-- Preloader -->
+        <div id="preloader"></div>
+
+        <!-- Footer Banner Style -->
+        <div id="footer-banner">
+            <div id="footer-content"></div>
+        </div>
+
+        <!-- Footer -->
         <footer>
-            <!-- footer.html --> 
-            <script>
-                document.addEventListener('DOMContentLoaded', function() {
-                    fetch('https://genialabile.com/footer.html')
-                        .then(response => response.text())
-                        .then(data => {
-                            const footerContent = document.getElementById('footer-content');
-                            footerContent.innerHTML = data;
-                        })
-                        .catch(error => console.error('Errore nel caricamento del footer-banner:', error));
-                document.addEventListener("DOMContentLoaded", () => {
-                            console.log("Pagina caricata, ritardo di avvio in corso...");
-                            setTimeout(() => {
-                                console.log("Avvio dell'animazione dopo il ritardo.");
-                                typeWriter();
-                            }, startDelay);
-                        });
-                    });
-            </script>
-            <!-- footer.html --> 
+            <script src="https://genialabile.com/assets/scripts/footer.js" defer></script>
+            <script src="https://genialabile.com/assets/scripts/preloader.js" defer></script>
         </footer>
-            <!-- FADE --> 
-            <script>
-                document.addEventListener("DOMContentLoaded", function () {
-                    setTimeout(function () {
-                        document.body.classList.add("visible");
-                    }, 2000);
-                });
-            </script>
-            <!-- FADE -->
-            <!-- HACK-BUGS --> 
-            <script>
-                document.addEventListener("DOMContentLoaded", function () {
-                    setTimeout(function () {
-                        document.body.classList.add("visible");
-                    }, 2000);
-                });
-            </script>
-            <!-- FADE -->  
     </body>
 </html>
