--- a/accessibility.html
+++ b/accessibility.html
@@ -41,6 +41,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         </script>
         
     </head>
+
     <body style="background-color: #000000; color: #000000;">
         <main>
              <!-- Main title -->
@@ -114,6 +115,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 <section>
                     <h3>📮 Assistance</h3>
                     <hr class="thin-line">
+                    <p>
+                        For any inquiries or assistance, feel free to contact us.
+                    </p>
                     <p>
                         Email: 
                         <a href="mailto:info@genialabile.com?subject=Accesiibility%20Request"
