--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -28,7 +28,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <meta name="description" content="Genialabile - Privacy Policy Content.">
         <!-- Meta tags for search engines -->
         <meta name="keywords" content="Genialabile, Privacy Policy, GDPR, CCPA, Data Protection">
-        <link rel="canonical" href="https://genialabile.com/accessibility.html">
+        <link rel="canonical" href="https://genialabile.com/privacy-policy.html">
 
         <!-- Fetching header dynamically -->
         <script>
@@ -41,6 +41,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         </script>
         
     </head>
+
     <body style="background-color: #000000; color: #000000;">
         <main>
              <!-- Main title -->
@@ -219,8 +220,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 <section><br></section>
 
                 <section>
-                    <h3>📮 Query</h3>
+                    <h3>📮 Assistance</h3>
                     <hr class="thin-line">
+                    <p>
+                        For any inquiries or assistance, feel free to contact us.
+                    </p>
                     <p>
                         Email: 
                         <a href="mailto:info@genialabile.com?subject=Privacy%20Request"
