--- a/index.html
+++ b/index.html
@@ -62,13 +62,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
             <section>
                 <h2>Home Pitch</h2>
                 <hr class="thin-line">
-                    <p>
+                    <p id="imp-links">  
                         Get ready to explore the key features of Genialabile,
-                        the top AI solution designed for your growth and creativity.
-                    </p>
-                    <p id="imp-links">    
-                        No time to read it all?<br>
-                        Let me summarize it for you!
+                        the top AI solution designed for your growth and creativity.<br>
+                        No time to read it all?
+                        Let me summarize it for you!<br>
                         Turn on the
                         <a href="https://genialabile.com/cli"
                         aria-label="Genialabile Live CLI Presentation" title="Genialabile Live CLI Presentation">
