Update index removed .html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <meta name="description" content="Genialabile - Homepage of the AI mentor and virtual assistant. Quick features overview.">
         <!-- Meta Page -->
         <meta name="keywords" content="Genialabile Homepage. Gen-ia, AI mentor, virtual assistant, Advanced GPT, Pitch, Quick features overview">
-        <link rel="canonical" href="https://genialabile.com/index.html">
+        <link rel="canonical" href="https://genialabile.com/index">
 
         <!-- Fetching header dynamically -->
         <script>
