--- a/cli.html
+++ b/cli.html
@@ -29,7 +29,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <meta name="description" content="Genialabile - Dive into CLI-inspired experience simulation, as AI companion offering personalized guidance and innovative solutions.">
         <!-- Meta Page -->
         <meta name="keywords" content="Genialabile, AI mentor, CLI interface, virtual assistant, advanced GPT">
-        <link rel="canonical" href="https://genialabile.com/cli.html">
+        <link rel="canonical" href="https://genialabile.com/cli">
       
         <!-- header.html -->
         <script>
