--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <meta name="description" content="Genialabile - Contacts & Social Media, Credits">
          <!-- Meta tags for search engines -->
          <meta name="keywords" content="Genialabile, Links Page, Social Media, Credits, Contact Information">
-         <link rel="canonical" href="https://genialabile.com/contact.html">
+         <link rel="canonical" href="https://genialabile.com/contact">
         
          <!-- Fetching header dynamically -->
         <script>
