--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -28,7 +28,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <meta name="description" content="Genialabile - Cookie Policy Content.">
           <!-- Meta tags for search engines -->
           <meta name="keywords" content="Genialabile, Cookie Policy, Cookies, GDPR, CCPA, Privacy Policy">
-          <link rel="canonical" href="https://genialabile.com/cookie-policy.html">
+          <link rel="canonical" href="https://genialabile.com/cookie-policy">
        
         <!-- Fetching header dynamically -->
         <script>
