--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -28,7 +28,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <meta name="description" content="Genialabile - Privacy Policy Content.">
         <!-- Meta tags for search engines -->
         <meta name="keywords" content="Genialabile, Privacy Policy, GDPR, CCPA, Data Protection">
-        <link rel="canonical" href="https://genialabile.com/privacy-policy.html">
+        <link rel="canonical" href="https://genialabile.com/privacy-policy">
 
         <!-- Fetching header dynamically -->
         <script>
