--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -28,7 +28,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <meta name="description" content="Genialabile - Terms & Conditions Disclosure.">
         <<!-- Meta tags for search engines -->
         <meta name="keywords" content="Genialabile, Terms and Conditions, Legal, Privacy, GDPR, CCPA">
-        <link rel="canonical" href="https://genialabile.com/terms-and-conditions.html">
+        <link rel="canonical" href="https://genialabile.com/terms-and-conditions">
 
         <!-- Fetching header dynamically -->
         <script>
