--- a/accessibility.html
+++ b/accessibility.html
@@ -28,7 +28,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <meta name="description" content="Genialabile - Accessibility Front Statement.">
         <!-- Meta tags for search engines -->
         <meta name="keywords" content="Genialabile, Accessibility Page, ADA, CCPA, WCAG, Screen Reader, Keyboard Navigation">
-        <link rel="canonical" href="https://genialabile.com/accessibility.html">
+        <link rel="canonical" href="https://genialabile.com/accessibility.">
 
         <!-- Fetching header dynamically -->
         <script>
