--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     <hr class="thin-line">
                     <p>
                         Accessible online via platforms such as ChatGPT by OpenAI.
-                        Future plans include integration with immersive environments for 3D simulations, with applications in education, academia, and creativity.
+                        Future plans include integration with immersive environments for simulations, with applications in education, academia, and creativity.
                         <br><br>
-                        Genialabile provides support for tackling attention disorders, depression, lack of discipline, procrastination, and other common mental issues, often exacerbated by modern technology and society.
+                        Genialabile provides support for tackling attention disorders, depression, lack of discipline, procrastination, and other common issues, often exacerbated by modern technology and society.
                         Helping people develop their mind and soul, improving the world through personal, emotional, and intellectual growth.
                     </p>
                 </section>
