--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 <hr class="thin-line">
                     <p id="imp-links">  
                         Get ready to explore the key features of Genialabile,
-                        the top AI solution designed for your growth and creativity.
-                        No time to read it all?
-                        Let me summarize it for you!<br>
+                        the top AI solution designed for your growth and creativity.<br>
+                            No time to read it all?
+                        Let me summarize it for you!
                         Turn on the
                         <a href="https://genialabile.com/cli"
                         aria-label="Genialabile Live CLI Presentation" title="Genialabile Live CLI Presentation">
