Rimuovi "top" dalla descrizione in index.html per migliorare la chiarezza del messaggio

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 <hr class="thin-line">
                     <p id="imp-links">  
                         Get ready to explore the key features of Genialabile,
-                        the top AI solution designed for your growth and creativity.<br>
+                        the AI solution designed for your growth and creativity.<br>
                         Not in the mood to read it all? Let me summarize it for you!
                         Turn on the
                         <a href="https://genialabile.com/cli"
