Aggiorna il nome dell'azienda in vari file e modifica il messaggio di copyright per riflettere "Genialabile & Co."

--- a/contact.html
+++ b/contact.html
@@ -157,13 +157,16 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 <section>
                     <h3>👾 Credits</h3>
                     <hr class="thin-line">
+                    <!--
                     <p>
                         Develop & Designed by
                         <a href="https://x.com/seiseisette/"
                         aria-label="Visit seiseisette on X (Twitter)">seiseisette</a>.
                     </p>
+                    -->
                     <p>   
-                        Website & Repository Hosted by
+                        Design<!-- Website -->
+                        & Repository Hosted by
                         <a href="https://github.com/seiseisette/genialabile.com/"
                         aria-label="Visit Genialabile website repository on GitHub">GitHub</a>.
                     </p>
@@ -173,15 +176,14 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         aria-label="Visit OpenAI website">OpenAI</a>.
                     </p>
                     <p>
-                        GOF's Genialabile Designed by seiseisette.                        
+                        <!-- GOF's Genialabile Designed by seiseisette. <br> -->                       
+                        <b>©</b> 2025 Genialabile & Co. All Rights Reserved.
                         <br>
-                        <b>©</b> 2025 Genialabile. All Rights Reserved.
-                        <br>
-                        ORCID:
-                        <a href="https://orcid.org/0009-0002-6309-2937" target="_blank" rel="noopener noreferrer"
+                        ORCID:0009-0002-6309-2937
+                        <!-- <a href="https://orcid.org/0009-0002-6309-2937" target="_blank" rel="noopener noreferrer"
                         style="width: normal; color: #f4f4f4; text-decoration: none;"
                         aria-label="Visit seiseisette's ORCID profile 0009-0002-6309-2937">
-                        0009-0002-6309-2937</a>
+                        0009-0002-6309-2937</a> -->
                     </p>
                 </section>
             </div>
