--- a/footer.html
+++ b/footer.html
@@ -60,5 +60,5 @@ Use, distribution, or modification of this project is strictly prohibited withou
 </p>
 <!-- COPY -->
 <p id="footer-copyright">
-    © 2025 Genialabile. All Rights Reserved.
+    © 2025 Genialabile & Co. All Rights Reserved.
 </p>
