Aggiorna il messaggio di copyright per riflettere "Genialabile & Co."

--- a/accessibility.html
+++ b/accessibility.html
@@ -9,7 +9,7 @@ Advanced-GPT inspiring multidimensional solutions and unlocking creative potenti
 
 -------------------------------------------------------------------------------
 ## License
-© 2025 GENiALABILE. All Rights Reserved.
+© 2025 Genialabile & Co. All Rights Reserved.
 A GPT-Based Project — Designed by seiseisette.
 Repository: https://github.com/seiseisette/
 This project is no longer available as open-source. Updated: 10 Jan 2025.
