--- a/x.html
+++ b/x.html
@@ -62,25 +62,31 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 align-items: center;
                 justify-content: space-between;
                 cursor: pointer;
-                background-color: #f0f0f0;
-                padding: 10px;
+                background-color: var(--info-bg);
+                /* padding: 10px; */
                 border-radius: 5px;
                 transition: background-color 0.3s;
             }
             .menu-title:hover {
-                background-color: #e0e0e0;
+                background-color: var(--info-bg);
             }
             .menu-title h3 {
                 margin: 0;
             }
             .menu-title .toggle-icon {
-                font-size: 20px;
+                font-size: 1.5rem; /* 20px; */
+            }
+
+            .toggle-icon:hover{
+                color: var(--compiler1-color);
+                text-decoration: none;
+                font-weight: bold;
             }
             .menu-content {
                 display: none;
                 padding: 15px;
-                background-color: #fafafa;
-                border: 1px solid #ddd;
+                background-color: var(--info-bg);
+                border: 1px solid #000;
                 border-radius: 5px;
                 margin-top: 10px;
             }
@@ -194,26 +200,45 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
                 <section>
                 <div class="menu-title" onclick="toggleMenu()">
-                    <h3>GPTs</h3>
-                    <span class="toggle-icon">+</span>
+                    <h3>🤖 GPTs <span class="toggle-icon">[+]</span></h3>
+                     
                 </div>
+                <hr class="thin-line">
                 <div class="menu-content" id="menuContent">
                     <div class="gpt-item">
-                        <img src="assets/icons/favicon-96x96.png" alt="GPT Logo">
-                        <span><a href="/">Genialabile</a></span>
+                        <img src="https://genialabile.com/assets/icons/favicon-96x96.png" alt="Genialabile Logo" type="image/png"
+                        aria-label="Genialabile Logo">
+                        <span><a href="https://chatgpt.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile" target="_blank"
+                            aria-label="Genialabile on ChatGPT ">Genialabile</a></span>
                     </div>
                     <div class="gpt-item">
-                        <img src="https://via.placeholder.com/50" alt="GPT Logo">
-                        <span>Nome GPT 2</span>
+                        <img src="https://genialabile.com/assets/icons/other-gpts/mastro_gpt_96x96.png0" alt="Mastro GPT Logo" type="image/png"
+                        aria-label="Mastro GPT Logo">
+                        <span><a href="https://chatgpt.com/g/g-679517ff19988191ac8f12987c149656-mastro-gpt" target="_blank"
+                            aria-label="Mastro GPT on ChatGPT">Mastro GPT</a></span>
                     </div>
                     <div class="gpt-item">
-                        <img src="https://via.placeholder.com/50" alt="GPT Logo">
-                        <span>Nome GPT 3</span>
+                        <img src="https/genialabile.com/assets/icons/other-gpts/trading_milk_96x96.png" alt="Trading Milk GPT Logo" type="image/png"
+                        aria-label="Trading Milk Logo">
+                        <span><a href="https://chatgpt.com/g/g-6792616dcedc8191899e08c5d359128a-trading-milk" target="_blank"
+                            aria-label="Trading Milk on ChatGPT ">Trading Milk</a></span>
                     </div>
+                    <!-- 
                     <div class="gpt-item">
                         <img src="https://via.placeholder.com/50" alt="GPT Logo">
                         <span>Nome GPT 4</span>
                     </div>
+                    --->
+                   <p></p>
+                </section>
+                <section>
+                    <p>
+                        The Original Collection is designed to fit your needs and provide you with the best possible experience.
+                        <br>
+                        Feel free to explore our GPTs and discover the power of AI in your hands.
+                        <br>
+                        Use the <b>"+"</b> sign to expand the list of Genialabile's GPTs.
+                    </p>
                 </section>
 
                 <section><br></section>
