--- a/x.html
+++ b/x.html
@@ -62,7 +62,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 align-items: center;
                 justify-content: space-between;
                 cursor: pointer;
-                background-color: var(--bg-color);
+                /*background-color: var(--bg-color);*/
                 /* padding: 10px; */
                 border-radius: 5px;
                 transition: background-color 0.3s;
