Modifica il raggio del bordo in x.html da 5px a 13px per migliorare l'aspetto visivo

--- a/x.html
+++ b/x.html
@@ -52,7 +52,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <style>
             
             .gpt-container {
-                max-width: 800px;
+                max-width: 1200px;   /* 800px; */
                 margin: 0 auto;
                 padding: 20px;
             }
@@ -65,7 +65,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 /*background-color: var(--bg-color);*/
                 /* padding: 10px; */
                 border-radius: 5px;
-                transition: background-color 0.3s;
+                transition: background-color 4s;
             }
             .menu-title:hover {
                 background-color: var(--info-bg);
@@ -87,7 +87,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 padding: 15px;
                 background-color: var(--info-bg);
                 border: 1px solid #000;
-                border-radius: 5px;
+                border-radius: 13px; /* 5px; */
                 margin-top: 10px;
             }
             .menu-content .gpt-item {
