--- a/x.html
+++ b/x.html
@@ -52,9 +52,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <style>
             
             .gpt-container {
-                max-width: 1200px;   /* 800px; */
+                max-width: 100%; /*1200px; /* 800px; */
                 margin: 0 auto;
-                padding: 20px;
+                /* padding: var(--spacing); */
             }
            
             .menu-title {
