Correggi il colore di sfondo nel menu e aggiorna il link dell'immagine di Mastro GPT

--- a/x.html
+++ b/x.html
@@ -48,6 +48,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
 
 
+
        
         <style>
             
@@ -65,10 +66,10 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 /*background-color: var(--bg-color);*/
                 /* padding: 10px; */
                 border-radius: 5px;
-                transition: background-color 4s;
+                transition: background-color 0.3s;
             }
             .menu-title:hover {
-                background-color: var(--info-bg);
+                background-color: var(--compiler1-color;
             }
             .menu-title h3 {
                 margin: 0;
@@ -238,7 +239,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                             aria-label="Genialabile on ChatGPT ">Genialabile</a></span>
                     </div>
                     <div class="gpt-item">
-                        <img src="https://genialabile.com/assets/icons/other-gpts/mastro_gpt_96x96.png0" alt="Mastro GPT Logo" type="image/png"
+                        <img src="https://genialabile.com/assets/icons/other-gpts/mastro_gpt_96x96.png" alt="Mastro GPT Logo" type="image/png"
                         aria-label="Mastro GPT Logo">
                         <span><a href="https://chatgpt.com/g/g-679517ff19988191ac8f12987c149656-mastro-gpt" target="_blank"
                             aria-label="Mastro GPT on ChatGPT">Mastro GPT</a></span>
