--- a/x.html
+++ b/x.html
@@ -63,13 +63,13 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 align-items: center;
                 justify-content: space-between;
                 cursor: pointer;
-                /*background-color: var(--bg-color);*/
+                background-color: var(--bg-color);
                 /* padding: 10px; */
                 border-radius: 5px;
-                transition: background-color 0.3s;
+                transition: background-color 3s;
             }
             .menu-title:hover {
-                background-color: var(--compiler1-color;
+                background-color: var(--compiler1-color);
             }
             .menu-title h3 {
                 margin: 0;
@@ -81,6 +81,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             .toggle-icon:hover{
                 color: var(--compiler1-color);
                 text-decoration: none;
+                transition: color 0.33s;
                 font-weight: bold;
             }
             .menu-content {
