--- a/x.html
+++ b/x.html
@@ -246,7 +246,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                             aria-label="Mastro GPT on ChatGPT">Mastro GPT</a></span>
                     </div>
                     <div class="gpt-item">
-                        <img src="https://genialabile.com/assets/icons/other-gpts/trading_milk_96x96.png.png" alt="Trading Milk GPT Logo" type="image/png"
+                        <img src="https://genialabile.com/assets/icons/other-gpts/trading_milk_96x96.png" alt="Trading Milk GPT Logo" type="image/png"
                         aria-label="Trading Milk Logo">
                         <span><a href="https://chatgpt.com/g/g-6792616dcedc8191899e08c5d359128a-trading-milk" target="_blank"
                             aria-label="Trading Milk on ChatGPT ">Trading Milk</a></span>
