Aggiorna i link delle immagini e modifica il testo descrittivo per Trading Milk e Mastro GPT

--- a/x.html
+++ b/x.html
@@ -234,30 +234,37 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 <hr class="thin-line">
                 <div class="menu-content" id="menuContent">
                     <div class="gpt-item">
-                        <img src="https://genialabile.com/assets/icons/favicon-96x96.png" alt="Genialabile Logo" type="image/png"
-                        aria-label="Genialabile Logo">
+                        <img src="https://genialabile.com/assets/icons/favicon-96x96.png"
+                        alt="Genialabile Logo" type="image/png" aria-label="Genialabile Logo">
                         <span><a href="https://chatgpt.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile" target="_blank"
-                            aria-label="Genialabile on ChatGPT ">Genialabile</a></span>
+                            aria-label="Genialabile on ChatGPT">Genialabile</a>
+                            Multidimensional Solutions and Visionary Guide</span>
                     </div>
                     <div class="gpt-item">
-                        <img src="https://genialabile.com/assets/icons/other-gpts/mastro_gpt_96x96.png" alt="Mastro GPT Logo" type="image/png"
-                        aria-label="Mastro GPT Logo">
-                        <span><a href="https://chatgpt.com/g/g-679517ff19988191ac8f12987c149656-mastro-gpt" target="_blank"
-                            aria-label="Mastro GPT on ChatGPT">Mastro GPT</a></span>
-                    </div>
-                    <div class="gpt-item">
-                        <img src="https://genialabile.com/assets/icons/other-gpts/trading_milk_96x96.png" alt="Trading Milk GPT Logo" type="image/png"
-                        aria-label="Trading Milk Logo">
+                        <img src="https://genialabile.com/assets/icons/other-gpts/trading_milk_96x96.png"
+                            alt="Trading Milk GPT Logo" type="image/png" aria-label="Trading Milk Logo">
                         <span><a href="https://chatgpt.com/g/g-6792616dcedc8191899e08c5d359128a-trading-milk" target="_blank"
-                            aria-label="Trading Milk on ChatGPT ">Trading Milk</a></span>
+                            aria-label="Trading Milk on ChatGPT">Trading Milk</a>
+                            Trading Solutions and Disciplined Guide</span>
                     </div>
-                    <!-- 
                     <div class="gpt-item">
-                        <img src="https://via.placeholder.com/50" alt="GPT Logo">
-                        <span>Nome GPT 4</span>
+                        <img src="https://genialabile.com/assets/icons/other-gpts/mastro_gpt_96x96.png"
+                        alt="Mastro GPT Logo" type="image/png" aria-label="Mastro GPT Logo">
+                        <span><a href="https://chatgpt.com/g/g-679517ff19988191ac8f12987c149656-mastro-gpt" target="_blank"
+                            aria-label="Mastro GPT on ChatGPT">Mastro GPT</a>
+                            The Ultimate Custom GPT Builder.</span>
                     </div>
-                    --->
+                    <div class="gpt-item">
+                        <img src="https://genialabile.com/assets/icons/other-gpts/sir_atty_96x96.png"
+                            alt="Sir Atty Logo" type="image/png" aria-label="Sir Atty Logo">
+                        <span><a href="https://chatgpt.com/g/g-67956d85bdb08191873011598d04c277-sir-atty" target="_blank"
+                            aria-label="Sir Atty on ChatGPT">Sir Atty</a>
+                            The Puppet: Pulling the Strings of Justice.</span>
+                    </div>
+                    
+
                    <p></p>
+                   
                 </section>
                 <section>
                     <p>
